# ar3_core

./: docker-compose.yml
ar3_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
ar3_moveit2/config/: ar3.srdf  ar3.urdf  fake_controllers.yaml  moveit_controllers.yaml
ar3_moveit2/launch/: .demo.launch.py.swp  demo.launch.py  empty.rviz
