<?xml version="1.0"?>
<package format="3">
    <name>ar3_moveit_config</name>
    <version>1.0.0</version>
    <description>MoveIt2 configuration for Annin Robotics AR3</description>
    <maintainer email="smartin015@gmail.com">Scott Martin</maintainer>
    <author>Scott Martin</author>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
